--- a/locale/it/LC_MESSAGES/multisite.po
+++ b/locale/it/LC_MESSAGES/multisite.po
@@ -45760,7 +45760,7 @@ msgid "SAML 2.0"
 msgstr ""
 
 #, fuzzy
-msgid "SAML Authentication"
+msgid "SAML authentication"
 msgstr "Autenticazione SMTP"
 
 #, fuzzy
