--- a/locale/fr/LC_MESSAGES/multisite.po
+++ b/locale/fr/LC_MESSAGES/multisite.po
@@ -45570,7 +45570,7 @@ msgid "SAML 2.0"
 msgstr ""
 
 #, fuzzy
-msgid "SAML Authentication"
+msgid "SAML authentication"
 msgstr "Authentification SMTP"
 
 #, fuzzy
