SAML: fix incorrect upper case use in GUI titles
Change-Id: I78e4bdf0cff55bcf90375fe23eae8ee4fa42a121

--- a/locale/de/LC_MESSAGES/multisite.po
+++ b/locale/de/LC_MESSAGES/multisite.po
@@ -40626,7 +40626,7 @@ msgid "SAML 2.0"
 msgstr ""
 
 #, fuzzy
-msgid "SAML Authentication"
+msgid "SAML authentication"
 msgstr "SMTP-Authentifizierung"
 
 #, fuzzy
