--- a/locale/es/LC_MESSAGES/multisite.po
+++ b/locale/es/LC_MESSAGES/multisite.po
@@ -40861,7 +40861,7 @@ msgid "SAML 2.0"
 msgstr ""
 
 #, fuzzy
-msgid "SAML Authentication"
+msgid "SAML authentication"
 msgstr "Autenticación SMTP"
 
 #, fuzzy
