--- a/locale/nl/LC_MESSAGES/multisite.po
+++ b/locale/nl/LC_MESSAGES/multisite.po
@@ -40518,7 +40518,7 @@ msgid "SAML 2.0"
 msgstr ""
 
 #, fuzzy
-msgid "SAML Authentication"
+msgid "SAML authentication"
 msgstr "SMTP-verificatie"
 
 #, fuzzy
