--- a/locale/pt_PT/LC_MESSAGES/multisite.po
+++ b/locale/pt_PT/LC_MESSAGES/multisite.po
@@ -40904,7 +40904,7 @@ msgid "SAML 2.0"
 msgstr ""
 
 #, fuzzy
-msgid "SAML Authentication"
+msgid "SAML authentication"
 msgstr "Autenticação SMTP"
 
 #, fuzzy
