--- a/locale/ro/LC_MESSAGES/multisite.po
+++ b/locale/ro/LC_MESSAGES/multisite.po
@@ -39341,7 +39341,7 @@ msgid "SAML 2.0"
 msgstr ""
 
 #, fuzzy
-msgid "SAML Authentication"
+msgid "SAML authentication"
 msgstr "trimite notificare"
 
 #, fuzzy
