--- a/locale/ja/LC_MESSAGES/multisite.po
+++ b/locale/ja/LC_MESSAGES/multisite.po
@@ -39012,7 +39012,7 @@ msgid "SAML 2.0"
 msgstr ""
 
 #, fuzzy
-msgid "SAML Authentication"
+msgid "SAML authentication"
 msgstr "SMTP認証"
 
 #, fuzzy
