fix incorrect translation SAML -> SMTP
SAML is SAML

Change-Id: I8e54ab98133db623db84b9485acc0733066cafa0

--- a/locale/de/LC_MESSAGES/multisite.po
+++ b/locale/de/LC_MESSAGES/multisite.po
@@ -44637,7 +44637,7 @@ msgstr "SAML 2.0"
 
 #, fuzzy
 msgid "SAML authentication"
-msgstr "SMTP-Authentifizierung"
+msgstr "SAML-Authentifizierung"
 
 #, fuzzy
 msgid "SAML connections"
