--- a/locale/it/LC_MESSAGES/multisite.po
+++ b/locale/it/LC_MESSAGES/multisite.po
@@ -45761,7 +45761,7 @@ msgstr ""
 
 #, fuzzy
 msgid "SAML authentication"
-msgstr "Autenticazione SMTP"
+msgstr "Autenticazione SAML"
 
 #, fuzzy
 msgid "SAML connections"
