--- a/locale/nl/LC_MESSAGES/multisite.po
+++ b/locale/nl/LC_MESSAGES/multisite.po
@@ -45038,7 +45038,7 @@ msgstr ""
 
 #, fuzzy
 msgid "SAML authentication"
-msgstr "SMTP-verificatie"
+msgstr "SAML-verificatie"
 
 #, fuzzy
 msgid "SAML connections"
