--- a/locale/pt_PT/LC_MESSAGES/multisite.po
+++ b/locale/pt_PT/LC_MESSAGES/multisite.po
@@ -45439,7 +45439,7 @@ msgstr ""
 
 #, fuzzy
 msgid "SAML authentication"
-msgstr "Autenticação SMTP"
+msgstr "Autenticação SAML"
 
 #, fuzzy
 msgid "SAML connections"
