--- a/locale/it/LC_MESSAGES/multisite.po
+++ b/locale/it/LC_MESSAGES/multisite.po
@@ -41219,7 +41219,7 @@ msgstr ""
 
 #, fuzzy
 msgid "SAML authentication"
-msgstr "Autenticazione SMTP"
+msgstr "Autenticazione SAML"
 
 #, fuzzy
 msgid "SAML connections"
