--- a/locale/pt_PT/LC_MESSAGES/multisite.po
+++ b/locale/pt_PT/LC_MESSAGES/multisite.po
@@ -40905,7 +40905,7 @@ msgstr ""
 
 #, fuzzy
 msgid "SAML authentication"
-msgstr "Autenticação SMTP"
+msgstr "Autenticação SAML"
 
 #, fuzzy
 msgid "SAML connections"
