CRE bakery API: Adjust Sphinx doc
CMK-14050

Change-Id: Ia465c1550b3198ce94d7ffea46c79e678abc60ab

--- a/doc/plugin-api/source/cmk.base.plugins.bakery.bakery_api/v1.register.rst
+++ b/doc/plugin-api/source/cmk.base.plugins.bakery.bakery_api/v1.register.rst
@@ -2,6 +2,6 @@
 bakery_api.v1.register
 ======================
 
-.. automodule:: cmk.base.cee.plugins.bakery.bakery_api.v1.register
+.. automodule:: cmk.base.plugins.bakery.bakery_api.v1.register
    :members:
    :show-inheritance:
