--- a/doc/plugin-api/source/cmk.base.plugins.bakery.bakery_api/v1.rst
+++ b/doc/plugin-api/source/cmk.base.plugins.bakery.bakery_api/v1.rst
@@ -2,6 +2,6 @@
 bakery_api.v1
 =============
 
-.. automodule:: cmk.base.cee.plugins.bakery.bakery_api.v1
+.. automodule:: cmk.base.plugins.bakery.bakery_api.v1
    :members:
    :show-inheritance:
