Note that werk 18697 has been reverted
Change-Id: I7d241de818eb910e24f21e4d13ca73808adef475
(cherry picked from commit 69941d51e057b8680272c818260fba30d8b3d8ae)

--- a/.werks/18697.md
+++ b/.werks/18697.md
@@ -15,3 +15,5 @@ The effect of the rules "Assignment of hosts to contact groups"/"Assignment of s
 They did not assign contact groups to the host's permission, but limited visibility when monitoring hosts/services to contact groups instead.
 
 These monitoring rules have been renamed to "Set host visibility for contact groups"/"Set service visibility for contact groups" to avoid any further misunderstandings.
+
+**Note**: This werk has been reverted with werk #18137.
