omd: remove keepold and install
CMK-26838

Change-Id: I5cc8569f9ce055d6e0939893784f52b29a957e3c

--- a/.werks/18883.md
+++ b/.werks/18883.md
@@ -37,3 +37,4 @@ The default settings remain safe for typical use but can be customized to fit yo
 
 If you use the `--conflict` flag during site updates, you must now replace it with the new `--skeleton` and `--pre-flight` options to control conflict resolution behavior.
 The flag `--conflict` is deprecated and will be removed with Checkmk 2.6.
+This Werk removes the semantically ambiguous options `cmk-update-config --conflict=install` and `cmk-update-config --conflict=keepold`.
