17998 adjust werk: add note about 2.2.0
Change-Id: Icd6e10387d0f46386b779d77be95c1c73b25f5d5

--- a/.werks/17998.md
+++ b/.werks/17998.md
@@ -34,6 +34,8 @@ Affected are all distributed setups in which one remote site might be compromise
 * 2.2.0
 * 2.1.0 (EOL)
 
+Note that, due to the complexity of the change and the very specific circumstances under which this becomes a concern, no patch is planned for Checkmk version 2.2.0 (which is currently in passive maintenance).
+
 *Vulnerability Management*:
 
 We have rated the issue with a CVSS Score of 8.5 High (`CVSS:4.0/AV:N/AC:L/AT:N/PR:H/UI:P/VC:H/VI:H/VA:H/SC:N/SI:N/SA:N`) and assigned `CVE-2025-39663`.
