Cleanup a few Raw edition references
Change-Id: Ibaebd846fbc57b1094b5b46842dff0da9c61d7f2

--- a/agents/plugins/README
+++ b/agents/plugins/README
@@ -31,7 +31,7 @@ The format in which the Bakery-Plugin writes and the Agent-Plugin reads the conf
 for new Plugins a `ConfigParser` solution would be preferable.
 
 You should also create an example configuration in ``agents/cfg_examples/`` so
-users of checkmk raw edition know how to configure the Agent-Plugin without
+users of Checkmk Community know how to configure the Agent-Plugin without
 being able to bake agents.
 
 Recent Examples:
