omd: remove --confirm-requires-root
It is clear (both from internal discussions and discussions with a user) that this option is confusing. That is unsurprising, since this option does nothing in the 2.5 and is only available in case we need an Apache update. I believe that there are better alternatives available to enforce a root update:

* Perform the privileged steps during the .deb/.rpm install.
* Require users to call `sudo omd update`.
* Install a binary with SUID bits for purposes of the update.

Change-Id: I4dd318b2fa910d45229d2cf5d9bd8cb12d57cd26

--- a/.werks/18154.md
+++ b/.werks/18154.md
@@ -20,13 +20,12 @@ The new options are alternatives to the so far existing `--force`.
 
 * `--confirm-version`,
 * `--confirm-edition`,
-* `--confirm-requires-root`,
 * `--ignore-editions-incompatible` and
 * `--ignore-versions-incompatible`.
 
 For example, the following command will not prompt the user.
 ```
-omd -V 2.5.0b1.cee update --confirm-edition --confirm-version --confirm-requires-root --conflict install
+omd -V 2.5.0b1.cee update --confirm-edition --confirm-version --conflict install
 ```
 For the up-to-date information on these flags, `omd update -h` should be consulted.
 
