--- a/CHANGES
+++ b/CHANGES
@@ -2,10 +2,10 @@ The textual changelog of Checkmk is created for regular releases only. If you
 want to see these changelogs, take a look at these files that you can find in
 your monitoring sites:
 
-All Editions:                   share/doc/check_mk/ChangeLog
-Checkmk Pro:                    share/doc/check_mk_pro/ChangeLog
-Checkmk Ultimate:               share/doc/check_mk_ultimate/ChangeLog
-Checkmk Ultimate multi-tenancy: share/doc/check_mk_ultimatemt/ChangeLog
+All Editions:             share/doc/check_mk/ChangeLog
+Enterprise Edition:       share/doc/check_mk_enterprise/ChangeLog
+Managed Services Edition: share/doc/check_mk_managed/ChangeLog
+Cloud Edition:            share/doc/check_mk_cloud/ChangeLog
 
 If you want to see the changes of a specific version and maybe filter the
 changes in a flexible way, please check out the list of changes on our
