Fixes for Werk #18920
- Mark as incompatible
- Fix formatting

Change-Id: I91d447d6899efee7e365bdb7521fb5fa308cfd9d

--- a/.werks/18920.md
+++ b/.werks/18920.md
@@ -9,11 +9,11 @@ class      | fix
 edition    | cee
 component  | agents
 level      | 1
-compatible | yes
+compatible | no
 
 The agent updater under Windows may stop working eventually after upgrading from Checkmk agent version 2.4.0p14 to 2.4.0p15 and when talking to a Checkmk server with custom HTTPS setup.
 
-This behavior got triggered by the Windows agent's Python modul upgrade of Werk [#17999|https://checkmk.com/werk/17999].
+This behavior got triggered by the Windows agent's Python modul upgrade of Werk [#17999](https://checkmk.com/werk/17999).
 
 Python 3.13 introduced strict x509 certificate validation handling.<br>
 Since this strict handling is not activated in most other standard TLS software, including _OpenSSL_, the failing validation may occur unexpectedly.
@@ -25,6 +25,7 @@ If your hosts happen to be locked out from agent deployment because of the stric
 The stricter validation often affects the web server certificate, so you might be able to fix the situation by replacing only this one, leaving the CA and/or intermediate CAs in place.
 
 For reference:
+
 * Release note of Python 3.13 mentioning the strict x509 validation: https://docs.python.org/3/whatsnew/3.13.html#ssl
 * OpenSSL flag that's applied in the Python `ssl` module: `VERIFY_X509_STRICT`
 * Strict validation means that x509 must conform to `RFC 5280`:  https://datatracker.ietf.org/doc/html/rfc5280.html
