--- a/.werks/18933.md
+++ b/.werks/18933.md
@@ -1,5 +1,5 @@
 [//]: # (werk v2)
-# Add support for Almalinux 10
+# Add support for RHEL 10
 
 key        | value
 ---------- | ---
@@ -11,4 +11,4 @@ component  | distros
 level      | 1
 compatible | yes
 
-With this werk, Checkmk is built for Almalinux 10
+With this werk, Checkmk is built for RHEL 10
