Adjust werk text
Change-Id: I7004adaed80aea7a6d2fb064f12a47ad39dfdddf

--- a/.werks/18868.md
+++ b/.werks/18868.md
@@ -11,7 +11,9 @@ component  | notifications
 level      | 1
 compatible | yes
 
-This werk only effects you if you want to upgrade from 2.3 to 2.4.
+This werk only affects you if you are upgrading from version 2.3 to 2.4 and
+use notification rules with the method ‘HTML email’ and the option ‘Cancel
+previous notifications.
 
 Werk #18859 in 2.4.0p16 introduced a new migration of old HTML email "From"
 parameters. This update action could fail, preventing the update to continue,
@@ -23,6 +25,6 @@ iterable" occurred.
 A possible workaround was to disable notifications in version 2.3 using the
 “Master switch” in the sidebar and changing all HTML email notification rules
 with option "Cancel previous notifications” to “Create notifications with the
-following parameters.” before updating. After the update, you simply switch the
+following parameters” before updating. After the update, you simply switch the
 rules back to “Suppress all previous” and re-enable notifications via the
 “Master switch.”
