--- a/.werks/18867.md
+++ b/.werks/18867.md
@@ -1,12 +1,12 @@
 [//]: # (werk v2)
-# Improve performance of notification processing
+# Improve performance of notification spooler
 
 key        | value
 ---------- | ---
 date       | 2025-11-20T08:16:19+00:00
 version    | 2.5.0b1
 class      | fix
-edition    | cre
+edition    | cee
 component  | notifications
 level      | 2
 compatible | yes
@@ -15,12 +15,12 @@ In large environments, with a huge configuration (thousands of folders), the
 processing of notifications could become slow (minutes per notifications), even
 leading to timeouts during notification processing.
 
-The notification system previously reloaded the configuration on each
-invocation of "cmk --notify" to perform rule matching. In large environments,
-this reload could become slow after configuration changes, leading to timeouts
-during notification processing.
+The notification spooler previously loaded the configuration on each invocation of "cmk
+--notify spoolfile SPOOLFILE" to perform rule matching. In large environments,
+this configuration loading could become slow after configuration changes,
+leading to timeouts during notification processing.
 
-With this werk the notification system leverages the automation helpers introduced in
+With this werk the notification spooler leverages the automation helpers introduced in
 version 2.4, which maintain the current configuration. Notification processing
 is triggered through an automation call, eliminating the need to reload the
 configuration on every notification.
