Follow-up for Werk 18623: allow seperate proxy configuration
"Check certificates" proxy configuration is now no longer
part of the connection type dropdown but a seperate option
that may be configured.

CMK-27689

Change-Id: I4bd5c1313a890e353deedeed810af06299ebeb93

--- a/.werks/18623.md
+++ b/.werks/18623.md
@@ -11,6 +11,6 @@ component  | checks
 level      | 1
 compatible | yes
 
-When using "Check certificates", you can no select "Proxy" as connection type.
+When using "Check certificates", you can now configure a "Proxy".
 
 With this you can connect to servers behind a proxy.
