--- a/.werks/17434.md
+++ b/.werks/17434.md
@@ -1,5 +1,5 @@
 [//]: # (werk v2)
-# Add support for RHEL 10
+# Add support for Red Hat Enterprise Linux 10
 
 key        | value
 ---------- | ---
@@ -7,8 +7,10 @@ date       | 2025-08-01T07:20:54+00:00
 version    | 2.5.0b1
 class      | feature
 edition    | cre
-component  | omd
+component  | distros
 level      | 1
 compatible | yes
 
-With this werk, Checkmk is built for RHEL 10
+With this Werk, Checkmk is now fully built and validated for Red Hat Enterprise Linux 10.
+
+All RHEL 10 packages are produced using an AlmaLinux 10 build environment that is fully compatible with RHEL, and the resulting builds undergo comprehensive testing to ensure complete functional and binary compatibility.
