Follow-up for Werk 18626: also add to subfolders gitignore
Change-Id: I6649dac8e6e7699c7375b3b6f451b5667ab28b5d

--- a/.werks/18626.md
+++ b/.werks/18626.md
@@ -18,3 +18,5 @@ Including them previously could lead to large repository sizes.
 
 With this change, .pkl files are automatically excluded from version control,
 resulting in smaller repository sizes.
+
+This change also fixes potentially unignored .swp and .mk.new files in subfolders.
