Increase awareness of breaking change in Werk #17999
Change-Id: I079e7ea66e01c58d461e8ff0babe67194201de81

--- a/.werks/17999.md
+++ b/.werks/17999.md
@@ -9,7 +9,7 @@ class      | security
 edition    | cre
 component  | checks
 level      | 1
-compatible | yes
+compatible | no
 
 The Python runtime environment used by the Checkmk Windows Agent has been proactively updated from version 3.12 to 3.13.
 
@@ -18,3 +18,19 @@ This update ensures the Windows agent is running on a fully supported Python bra
 *Vulnerability Management*:
 
 To aid automated scanning we assign a CVSS score of 0.0 None (`CVSS:4.0/AV:N/AC:L/AT:N/PR:N/UI:N/VC:N/VI:N/VA:N/SC:N/SI:N/SA:N`).
+
+**Caution**:
+
+This change may break your agent updater communication. Please ensure compatibility before updating.
+
+Details:<br>
+The Windows agent updater runs under the mentioned Python runtime environment.<br>
+Python 3.13 introduced a breaking change in TLS certificate handling, see https://docs.python.org/3/whatsnew/3.13.html#ssl .<br>
+This adds the non-standard `VERIFY_X509_STRICT` flag to the TLS context used for HTTPS communication.
+
+The HTTPS setup of the Checkmk server is not provided by us, but by you. Your certificate chain, and by that the agent updater HTTPS communication, may be non-conformant to the stricter verification.<br>
+However, standard TLS software, like *cURL* and *OpenSSL* don't enforce this flag, so the incompatibility may come surprisingly.
+
+We did not intent to introduce this breaking change during the lifecycle of the current stable release, so we roll back the stricter verification with Werk #18920.<br>
+When in doubt, please skip any patch release that doesn't contain the mentioned Werk.
+
