Werk 18921: Fix formatting
CMK-24931

Change-Id: Ic0bd3971d4964cfff2e10d3e08b578b455f1a81b

--- a/.werks/18921.md
+++ b/.werks/18921.md
@@ -13,11 +13,11 @@ compatible | no
 
 This Werk contains the fixes as applied to Checkmk 2.3 with Werk #18920, but goes beyond that and improves the configuration and output of the _Search for strings_ option.
 
-**Inverted header regex search didn't work**
+**Inverted header regex search didn't work**<br>
 Like in Werk #18920, the inverted header regex search is fixed now.
 
-**New info text**
-Instead of _(matched)_/_(not matched)_, the check output of regex searches now reads _(match found)/(no match found)_.<br>
+**New info text**<br>
+Instead of _(matched)/(not matched)_, the check output of regex searches now reads _(match found)/(no match found)_.<br>
 This little difference better matches the expression about _what_ is matched/not matched (The regex? Or the condition?)<br>
 And yes, like in Werk #18920, the output now is correct, with the following possibilities:
 
@@ -26,7 +26,7 @@ And yes, like in Werk #18920, the output now is correct, with the following poss
 * _OK_ Not expected ... (no match found)
 * _CRIT_ Not expected ... (match found)
 
-**Default CRIT state**
+**Default CRIT state**<br>
 Yes, we deliberately wrote _CRIT_ in the section above.<br>
 Since the initial release of the new _Check HTTP web service_ (`check_httpv2`) active check, we received some feedback regarding the (in)compatibility to the legacy _Check HTTP service_ (`check_http`) active check in some parts.<br>
 One common issue was `check_http` returning _CRIT_ in case of failed string searches, while `check_httpv2` returns _WARN_.<br>
@@ -34,7 +34,7 @@ Based on this feedback we now change the state to _CRIT_ to make `check_httpv2` 
 Please note that this is considered an incompatible change, as it happens on patch release upgrade.<br>
 You did like the _WARN_ state? Then the next item is for you.
 
-**Configurable state**
+**Configurable state**<br>
 We think that a returned _WARN_ state better resembles the general Checkmk behavior in case of a failing string search. A _CRIT_ state rather expresses a degraded system, like unreachable recources, or an exceeded limit indicating that some failure is imminent.<br>
 Because of this, we decided to make the state for failing _Search for strings_ conditions configurable. As mentioned above, it defaults to _CRIT_, but is now configurable via the additional _Service state for failing text search condition_ entry.
 
