Enhance BGP peer detection with IETF standards support
Extend detection to cover:
- FGT80F
- FGT70F
- FGT1101E
- FGT901G

If we down the road decide to cover even more of the devices, we could just use
all_of(
        startswith(".1.3.6.1.2.1.1.2.0", ".1.3.6.1.4.1.12356.101.1"),  # Fortinet FortiGate
        exists(".1.3.6.1.2.1.15.3.1.*"),
    )
to cover all of the devices

SUP-26333

Change-Id: I81c13f708977655b6990bac82386f91e9c2e2576

--- a/.werks/18525.md
+++ b/.werks/18525.md
@@ -13,3 +13,9 @@ compatible | yes
 
 Previously the "BGP Peer" service only supported Cisco and Arista devices.
 With this Werk, Fortinet FortiGate devices can be monitored as well.
+The list of supported devices is:
+- FGT1001F
+- FGT80F
+- FGT70F
+- FGT1101E
+- FGT901G
