Werk 18922: Improve formatting
Change-Id: Id0ad8f8c5ed9cdaa6e19f9039249ef9a64fdee53

--- a/.werks/18922.md
+++ b/.werks/18922.md
@@ -11,17 +11,18 @@ component  | checks
 level      | 1
 compatible | yes
 
-In the _Check HTTP web service_ ruleset, when configuring _Search for strings > search for header > Regular expression > Return CRITICAL_ [sic] _if found, OK if not_, some bugs occured:
+In the _Check HTTP web service_ ruleset, when configuring<br>
+_Search for strings > search for header > Regular expression > Return CRITICAL_ [sic] _if found, OK if not_<br>,
+some bugs occured:
 
-**Wrong caption in ruleset**
+**Wrong caption in ruleset**<br>
 First of all: The caption should read _Return WARN if found, OK if not_, since _WARN_ is the fixed state that will be returned for all failing header/body string/regex searches.<br>
 Please note that this will change starting with Checkmk 2.4.0p18, see Werk #18921.
 
-**Inverted header regex search didn't work**
+**Inverted header regex search didn't work**<br>
 The service yielded an _OK_ state most of the times, even if the regex _was_ found in the headers.<br>
 This happened because the search iterates over all headers and stopped on first expected result. If the first header didn't contain the regex, the engine was satisfied and didn't continue.
 
-**Wrong info on inverted header regex searches**
-Also the appended _(matched/not matched)_ info was swapped, leading to even more confusion.<br>
+**Wrong info on inverted header regex searches**<br>
+Also the appended _(matched)/(not matched)_ info was swapped, leading to even more confusion.<br>
 Note: This info text will be enhanced a bit to be more meaningful, see also Werk #18921.
-
