Werk 18922: Improve formatting again
Change-Id: I0687e2e56dde8583adbb5674430b8eb00c43664d

--- a/.werks/18922.md
+++ b/.werks/18922.md
@@ -12,7 +12,7 @@ level      | 1
 compatible | yes
 
 In the _Check HTTP web service_ ruleset, when configuring<br>
-_Search for strings > search for header > Regular expression > Return CRITICAL_ [sic] _if found, OK if not_<br>,
+_Search for strings > search for header > Regular expression > Return CRITICAL_ [sic] _if found, OK if not_,<br>
 some bugs occured:
 
 **Wrong caption in ruleset**<br>
