Fix wording in werk
SUP-26689

Change-Id: I93d7bc9610b0ebd2eb62216eab7efc3380c9931c

--- a/.werks/18348.md
+++ b/.werks/18348.md
@@ -11,7 +11,7 @@ component  | checks
 level      | 1
 compatible | yes
 
-When both options "Update service parameters" and "Update service parameters" were selected for a bulk discovery, all services were removed from all selected hosts.
+When both options "Update service labels" and "Update service parameters" were selected for a bulk discovery, all services were removed from all selected hosts.
 
 With this change, this problem has been fixed and services are updated instead of removed.
 
