Fixups for 18937.md
Change-Id: I35704e8adc2fac3c32acbd275a2dd6fa3017bd88
(cherry picked from commit 5f1a4fc3f3699d225191e40126e83b5c8ee008e6)

--- a/.werks/18937.md
+++ b/.werks/18937.md
@@ -6,20 +6,20 @@ key        | value
 date       | 2025-12-16T20:06:11+00:00
 version    | 2.4.0p18
 class      | fix
-edition    | cce
+edition    | cre
 component  | distros
 level      | 1
 compatible | no
 
 This affects the following operating systems:
 
-SLES 15 SP5, 15 SP6, 15 SP7
-RHEL 9, 10
-Debian 13
+* SLES 15 SP5, 15 SP6, 15 SP7
+* RHEL 9, 10
+* Debian 13
 
 ### The Core Problem: Library Conflicts
 
-Checkmk sites operate in a self-contained environment. To ensure stability, the site environment sets the `LD_LIBRARY_PATH` to prioritize Checkmk’s local libraries (found in the sites `~/lib` directory).
+Checkmk sites operate in a self-contained environment. To ensure stability, the site environment sets the `LD_LIBRARY_PATH` to prioritize Checkmk’s local libraries (found in the site's `~/lib` directory).
 
 However, a conflict arises on modern Linux distributions when the site user calls **system executables** that depend on a different version of OpenSSL than the one shipped with Checkmk. Because `LD_LIBRARY_PATH` is set, the system executable (e.g., `/usr/bin/dig`) incorrectly tries to use Checkmk's `libcrypto.so.3` instead of the system's version. This results in a fatal error like the following:
 
@@ -79,7 +79,6 @@ cd /opt/omd/sites/SITE_NAME/bin
 cp ./dig ./NEW_COMMAND_NAME
 ```
 
-### 4. Perspective for 2.5.0
+#### 4. Perspective for 2.5.0
 
 We're working on removing the need to to set `LD_LIBRARY_PATH` in `2.5.0`, such that wrappers and workarounds are no longer needed.
-
