--- a/.werks/18904.md
+++ b/.werks/18904.md
@@ -1,5 +1,5 @@
 [//]: # (werk v2)
-# Synethetic Monitoring: Introduce micromamba as RCC replacement
+# Synthetic Monitoring: Introduce micromamba as RCC replacement
 
 key        | value
 ---------- | ---
