fix display in Werk 18876
Change-Id: Id23c255d2ef650701790f342442af9818ae1730b

--- a/.werks/18876.md
+++ b/.werks/18876.md
@@ -11,8 +11,8 @@ component  | wato
 level      | 2
 compatible | yes
 
-The service discovery now uses the agent connection test introduced in werk
-#18872.
+The service discovery now uses the agent connection test introduced in Werk
+[#18872](https://checkmk.com/werk/18872).
 
 When you start service discovery for a host with the “Checkmk agent” option
 selected under “Monitoring agents,” the system automatically verifies whether
