check_http: correct Werk 17665
The migration can be done in the 2.5.0 as well, since the hard
deprecation only means that no new rules can be created.

CMK-27780

Change-Id: I42e50c3ada1faf161dc9c629038f1fe8dff13407

--- a/.werks/17665.md
+++ b/.werks/17665.md
@@ -11,7 +11,7 @@ component  | checks
 level      | 2
 compatible | no
 
-In werk #15515 the deprecation of the old HTTP monitoring plug-in was
+In Werk #15515 the deprecation of the old HTTP monitoring plug-in was
 announced for Checkmk 2.4.0 release. The deprecation has been postponed
 until the 2.5.0 release. This will allow more time to migrate to the new
 plug-in ruleset.
@@ -23,5 +23,4 @@ All other statements remain true as of Checkmk 2.5.0:
 - No new rules can be created in the deprecated rule set; all existing rules
   will still be used.
 
-This werk is considered incompatible. Migration to the new plug-in must be
-done before the 2.5.0 release, as it cannot be rolled back after that.
+This Werk is considered incompatible.
