--- a/.werks/18154.md
+++ b/.werks/18154.md
@@ -25,7 +25,7 @@ The new options are alternatives to the so far existing `--force`.
 
 For example, the following command will not prompt the user.
 ```
-omd -V 2.5.0b1.cee update --confirm-edition --confirm-version --conflict install
+omd -V 2.5.0b1.pro update --confirm-edition --confirm-version --conflict install
 ```
 For the up-to-date information on these flags, `omd update -h` should be consulted.
 
